Fix autocomplete being too small to show elements
This was a problem using Chromium on comdirect.de

--- a/content-scripts/autocomplete.css
+++ b/content-scripts/autocomplete.css
@@ -5,6 +5,7 @@
     margin: 0 !important;
     min-width: 200px;
     overflow: hidden;
+    position: absolute;
     z-index: 999999999;
 }
 .ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item {
